--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1202,3 +1202,16 @@ sub {
   gap: 1rem; 
   margin-top: 2rem; 
 }
+
+
+/* --- Stripe and Payments --- */
+
+.payment-container {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+}
+
+#pay-btn {
+  align-self: flex-start; 
+}
