--- a/apps/pdfexport/templates/pdfexport/doc_status.html
+++ b/apps/pdfexport/templates/pdfexport/doc_status.html
@@ -20,7 +20,7 @@
 
   <script>
     (function () {
-      const statusId = "{{ status_id }}";
+      const statusId = "{{ docraptor_status_id }}";
       const statusEl = document.getElementById('status');
 
       const poll = () => {
