Create CSP using nonces for payments/ pages, redesign checkout.html

--- a/apps/dashboard/templates/dashboard/home.html
+++ b/apps/dashboard/templates/dashboard/home.html
@@ -9,7 +9,7 @@
   <a href="{% url 'assessments:new_assessment' %}" class="button--primary">New Assessment</a>
 </div>
 
-<div class="dashboard-grid">
+<div class="grid">
   {% include "dashboard/includes/recent_assessments.html" %}
   <div class="dashboard-bottom">
     {% include "dashboard/includes/teams_list.html" %}
